[package]
name = "cyclone"
version = "0.1.0"
authors = ["Devin Jacobs <dbuttonz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_approx_eq = "1.1.0"
num = "0.2.0"
num-traits = "0.2.8"

[dev-dependencies]
rand = "0.7.2"
rand_distr = "0.2.2"
raylib = { git = "https://github.com/deltaphc/raylib-rs", branch = "master" }
